tests/suite/manifests/external-load-balancer/gateway-link/static.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: ExternalLoadBalancer
metadata:
  name: gateway-elb
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
  gatewayLink:
    virtualServerAddress: ${BIGIP_VIP}
    virtualServerName: gatewaylinkTestVS
    partition: ${BIGIP_PARTITION}
    monitors:
      - name: /Common/http
        reference: bigip
